Implemented Step-by-Step GUI page and configuration based of .janusignore